--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     ]
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/user-event": "^14.6.1",
     "@vis.gl/react-google-maps": "^1.7.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
